Allowed proper editing of stickers, bug squashing, last bug before MVP is needing to reload to set searchbar correctly.

--- a/frontend/src/stickerLayout/printPreview.css
+++ b/frontend/src/stickerLayout/printPreview.css
@@ -17,10 +17,6 @@
         grid-template-columns: repeat(3, 2.7in);
         grid-template-rows: repeat(5, 2in);
     }
-
-    .footer {
-        display: none !important;
-    }
 }
 
 @media screen {
